no visible bugs but still a lot to do

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -24,3 +24,7 @@ i {
     padding: 1em;
 }
 
+#error-msg-container {
+    border: solid black;
+}
+
